@@ -5374,6 +5374,7 @@ wizard_mysize_small=Small system (256M) with infrequent MySQL use
 wizard_mysize_medium=Medium system (512M) with regular MySQL use
 wizard_mysize_large=Large system (1G) on which MySQL is heavily used
 wizard_mysize_huge=Huge system (2G or more) on which MySQL is heavily used
+wizard_emysizestart=MySQL could not be started with the new configuration : $1. The old configuration has been restored.
 wizard_title_done=All done
 wizard_done=Virtualmin post-installation configuration is now complete!<p>You can adjust the settings you just made on the <a href='$1'>Features and Plugins</a> and <a href='$2'>Spam and Virus Scanning</a> pages.
 wizard_dns=For DNS zones created by Virtualmin to be resolvable, the primary nameserver record for each zone must be set to something that can itself be resolved by other systems on the Internet.
