@@ -1320,3 +1320,4 @@ MySQL connection limits for domain owners and mailboxes can now be set at the te
 When the email feature is disabled for a domain, all mail aliases are now removed and saved by Virtualmin. If email is later re-enabled, aliases will be restored.
 Expanded the Virtualmin plugin API to allow a plugin to replace the core Apache website feature, for example with Nginx.
 Backups now include the Dovecot control files of users when they are stored outside the home directory, so that message UIDs are preserved when the domain is restored on another system.
+The post-installation wizard now prompts for you to select a MySQL configuration size appropriate for the available memory on your system, and applies it to /etc/my.cnf.
